<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsNotifyFragment">

    <LinearLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/return_menu"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:paddingStart="60dp"
            android:text="@string/detail_event"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="11dp"
        android:gravity="center"
        android:text="@string/detail_notify" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:text="@string/receive_notify"
                android:textOff="off"
                android:textOn="on"
                android:textSize="15dp"
                android:textStyle="bold"
                android:thumb="@drawable/sw_thumb"
                app:showText="true"
                app:track="@drawable/sw_track" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/switchNotify"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:text="@string/notify_email"
                android:textOff="off"
                android:textOn="on"
                android:textSize="15dp"
                android:textStyle="bold"
                android:thumb="@drawable/sw_thumb"
                app:showText="true"
                app:track="@drawable/sw_track" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/switchEmail"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchWApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:text="@string/notify_whatsapp"
                android:textOff="off"
                android:textOn="on"
                android:textSize="15dp"
                android:textStyle="bold"
                android:thumb="@drawable/sw_thumb"
                app:showText="true"
                app:track="@drawable/sw_track" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/switchWApp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchSms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:text="@string/notify_sms"
                android:textOff="off"
                android:textOn="on"
                android:textSize="15dp"
                android:textStyle="bold"
                android:thumb="@drawable/sw_thumb"
                app:showText="true"
                app:track="@drawable/sw_track" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/switchSms"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/login_edit_background"
        android:layout_gravity="center"
        android:backgroundTint="#DBEDEDED"
        android:layout_marginTop="70dp"
        android:text="@string/info_important"
        android:gravity="center"
        />

</LinearLayout>